src/Runtime/kubernetes-wrapper/infra/kustomize/runtime/overlay/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kuberneteswrapper-strip-prefix
spec:
  replacePathRegex:
    regex: ^/kuberneteswrapper/(.*)
    replacement: /$1
