src/Runtime/kubernetes-wrapper/infra/kustomize/runtime/overlay/deployment-selector-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberneteswrapper
  labels:
    app: kubernetes-api-wrapper
spec:
  selector:
    matchLabels:
      app: kubernetes-api-wrapper
  template:
    metadata:
      labels:
        app: kubernetes-api-wrapper
