src/Runtime/kubernetes-wrapper/infra/kustomize/runtime/overlay/otel-env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberneteswrapper
spec:
  template:
    spec:
      containers:
        - name: kuberneteswrapper
